[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-cli-for-claude-code"
version = "1.0.0"
description = "Lightweight Bitbucket Cloud PR CLI tool designed for Claude Code integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ethan Drower", email = "ethan@citemed.com"}
]
keywords = ["bitbucket", "pull-request", "cli", "code-review", "claude-code", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0", 
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "inquirer>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
bb-pr = "bitbucket_cli.cli:main"

[project.urls]
Homepage = "https://github.com/ethandrower/bitbucket-cli-claude-code"
Repository = "https://github.com/ethandrower/bitbucket-cli-claude-code.git"
Issues = "https://github.com/ethandrower/bitbucket-cli-claude-code/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=bitbucket_cli --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/bitbucket_cli"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]